2014-07-15  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.c: convert_col_to_char_index() is fixed.

2014-07-14  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: The null pointer bug of_display.color_cache in the case
	  of vinfo.depth >= 2 && _disp.depth == 1 is fixed.

2014-07-13  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Compiling error is fixed.

	* ml_screen.c, x_screen.c:
	  ml_term_get_cols(screen->term) - line->num_of_chars
	  => ml_term_get_cols(screen->term) - ml_line_get_num_of_filled_cols(line)

	* x_selection.c: conved flag is added in update_sel_region() instead of
	  col != conved_col because it doesn't works if col == 0.

2014-07-13  Araki Ken  <arakiken@users.sf.net>

	* ml_screen.[ch], ml_term.h, x_screen.c, x_selection.[ch]:
	  Rectangle selection is supported.

	* win32/x_window.c: get_key_state() is set to XButtonEvent::state in
	  x_window_receive_event().

	* ml_line.c:
	  - ml_line_{reverse|restore}_color() calls ml_line_set_modified()
	    only if ml_char_{reverse|restore}_color() returns 1.
	  - BREAK_BOUNDARY works in ml_convert_char_index_to_col() works even if
	    specified line is empty.

	* ml_char.c: Minor fixes.

2014-07-10  Araki Ken  <arakiken@users.sf.net>

	* configure.in: "-lfontconfig -lfreetype" is added to CAIRO_LIBS and XFT_LIBS
	  because mlterm has undefined symbols if --disable-shared is specified on
	  some platforms where dependency_libs="" in libcairo.la.

2014-07-09  Araki Ken  <arakiken@users.sf.net>

	* x_display_freebsd.c: Duplicated capslock processing is fixed.

	* jni/x_display.c: Minor fixes.

2014-07-08  Araki Ken  <arakiken@users.sf.net>

	* x_display_x68kgrf.c:
	  - Keyboard events from /dev/kbd are processed instead of stdin.
	  - x68k_set_use_tvram_colors() and x68k_set_tvram_cmap() resets
	    _display.color_cache.

	* x.h: KS_Print -> KS_Print_Screen

	* x_display.c: Key squences on NetBSD/x68k are added to the table in
	  receive_stdin_key_event().
